# Katas

./: README.md
Audit Everything/: README.md
Bank Account/python/: bank_account.py  pyproject.toml  requirements.txt  tests.py
Bank Account/python/approvals/: tests.test_a_traction_error_will_not_affect_future_transactions.approved.txt  tests.test_bank_account_can_deposit.approved.txt  tests.test_bank_account_can_withdraw.approved.txt  tests.test_empty_bank_account.approved.txt  tests.test_multiple_deposits_are_recorded.approved.txt  tests.test_multiple_withdrawals_and_deposits_are_recorded.approved.txt  tests.test_multiple_withdrawals_and_deposits_are_recorded_even_when_received_out_of_order.approved.txt  tests.test_multiple_withdrawals_are_recorded.approved.txt
audit-everything/python/: README.md  pyproject.toml
audit-everything/python/src/audit_everything/: audit.py  file_system.py  file_utils.py
audit-everything/python/tests/: requirements.txt  test_audit.py  test_file_wrapper.py  utils.py
audit-everything/python/tests/approvals/: test_audit.audit_can_create_multiple_files_after_repeated_additions.approved.txt  test_audit.audit_sorts_files_by_number.received.txt  test_audit.audit_sorts_files_by_their_number.approved.txt  test_audit.audit_will_append_to_the_latest_file_when_it_has_not_overflowed.approved.txt  test_audit.audit_will_create_an_initial_audit_file_in_an_empty_directory.approved.txt  test_audit.audit_will_overflow_to_a_new_file_when_max_number_is_reached.approved.txt  test_file_wrapper.a_file_wrapper_appends_to_existing_files.approved.txt  (+1 more)
(+70 files in other folders)
