[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bank_account"
version = "0.0.1"
description = "The Bank Account Kata"
requires-python = ">=3.12"
dynamic = ["dependencies"]

[tool.setuptools]
py-modules = ["bank_account"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
